--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>How's My Plant?</title>
 		<!--using bootstrap for some simple css styling-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
